<resources>
    <string name="app_name">SolidariAPP</string>
    <string name="titol_inici">Inici</string>
    <string name="titol_generador">Generador</string>
    <string name="titol_estadistiques">Estadístiques</string>
    <string name="perfil_nom">Mostra el Nom aquí</string>
    <string name="perfil_correu">Mostra el Correu aquí</string>
    <string name="perfil_botoLogOff">Desconnecta la sessió</string>
    <string name="perfil_botoLogOn">Connecta</string>
    <string name="anuncisVistos">Anuncis diaris vistos</string>
    <string name="loadingAd">S\'estan carregan els anuncis, torna-ho a intentar. Si has vist molts anuncis pot ser que hagis d\'esperar unes hores per visualitzar-ne mes.</string>
    <string name="instruccions">Fes clic al llaç groc per començar a col·laborar</string>
    <string name="FailConnexio">No s\'han pogut carregar les dades del teu perfil de Google. Si us plau, reinstal·la l\'aplicació.\nSi el problema no se soluciona, posa\'t en contacte amb els administradors.</string>
    <string name="IniciDescripcio"><b>Què és SolidariAPP?</b>\nSolidariAPP ha estat creada per <b>Gamusino Studios</b>, per ajudar a les persones a contribuir amb la caixa de solidaritat
        de manera totalment gratuïta.\n\n<b>Què és la caixa de solidaritat?</b>\nLa caixa de solidaritat, creada per l\'ANC i ÒMNIUM permet fer front a les represàlies econòmiques que
        reben persones físiques com a conseqüència d’actuacions emmarcades en el procés cap a la independència per participar d’accions unitàries, cíviques, pacífiques i democràtiques.
        \nAquestes actuacions han de respondre a iniciatives acordades per les entitats i/ o partits sobiranistes o bé per seguir el mandat de les urnes i els acords del Parlament de
        Catalunya i el Govern de la Generalitat en favor del procés independentista.\n\n<b>Com funciona?</b>\nPer contribuir de forma totalment gratuita, nomes cal, anar a la pestanya
        Generador, i prémer el botó per veure videos publicitaris. Com més videos es vegin, més diners es generen. A final de cada més, es publicaran els ingressos aconseguits.\n
        \n<b>Com funcionen les donacions?</b>\nQuan s\'arribi a un nivell d\'ingressos suficients, els diners seran ingressats a les contes de la caixa de solidaritat segons els termes i
        condicions d\'aquesta aplicació.</string>
    <string name="banner_ad_unit_id">ca-app-pub-6311459401782434/1432091661</string>
    <string name="load">Dades de perfil carregades correctament</string>
    <string name="loadFail">No s\'ha pogut accedir al prefil de Google</string>
    <string name="TotalAnuncis">Anuncis visualitzats per tots els usuaris:</string>
    <string name="Totalpropi">Anuncis visualitzats per mi:</string>
    <string name="wifi">Alerta!</string>
    <string name="wifiText">Sembla que no fas servir connexió WIFI. La visualització d\'anuncis pot consumir considerablement la teva tarifa de dades. Et recomanem que et connectis a una xarxa wifi per utilitzar aquesta aplicació.</string>
    <string name="wifiOK">OK</string>
    <string name="wifiMaiMes">No recordar més</string>
    <string name="missatgeTitol">Missatge nou!</string>
</resources>
