<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="50dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="gamusinostudios.solidariapp.Fragment01">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/perfil"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp">
        
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/fotoPerfil"
            android:src="@mipmap/user"/>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perfil_nom"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:id="@+id/nomPerfil"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perfil_correu"
                android:textSize="12sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:id="@+id/correuPerfil"
                android:layout_marginTop="10dp"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/LayourPubli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btnPubli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher"
            android:background="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruccions"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anuncisVistos"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="50dp"/>
        <TextView
            android:id="@+id/anuncisVistos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LayoutErrorConn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FailConnexio"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
